removes position relative form hero, doesnt solve overlap

--- a/assets/final.css
+++ b/assets/final.css
@@ -35,7 +35,6 @@ footer {
   z-index: 5; }
 
 #hero {
-  position: relative;
   min-height: 250px;
   text-align: center;
   font-family: "Contrail One", sans-serif; }
