--- a/assets/raw.scss
+++ b/assets/raw.scss
@@ -48,7 +48,6 @@ footer {
 }
 
 #hero {
-  position: relative;
   min-height: 250px;
   text-align: center;
   font-family: $Contrail;
